src/client/Box/components/Mails/index.scss
@use "sass:math";
@use "sass:color";
@use "../../../variables" as *;

.getting_started {
  width: 100%;
  height: 100%;
  min-height: calc(100vh - 100px);
  display: flex;
  justify-content: center;
  align-items: center;

  div {
    max-width: 600px;
    padding: 1rem;
    position: relative;
    top: -3vh;
  }

  h1 {
    font-weight: 500;
    color: $color-point;
  }

  h1,
  h2,
  p {
    text-align: center;
    line-height: 1.8;
  }
}

.mails_container {
  width: 100%;
  position: relative;

  &.error {
    padding-top: 0.5rem;
  }

  .content {
    margin: 0;
  }

  .attachmentBox {
    position: relative;

    .attachment {
      margin-bottom: 0.4rem;
      position: relative;
      display: inline-flex;
      justify-content: center;
      align-items: center;
      margin-right: 0.4rem;
      padding: 0.4rem;
      font-size: 16px;

      svg {
        margin-right: 0.3rem;
      }
    }
  }

  .mailcard {
    position: relative;

    &.star {
      border-color: $color-point;
    }

    &.unread {
      border-color: rgb(200, 60, 70);
    }

    &.shadow {
      box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.05);
    }

    .text {
      margin-left: 8px;
      margin-right: 8px;
      margin-top: 0.4rem;

      .loading_message {
        position: absolute;
        margin-left: 8px;
      }

      iframe {
        padding-left: 8px;
        padding-right: 8px;
        background-color: white;
        width: 100%;
        height: 0;
        border: none;
        overflow-x: hidden;
      }
    }

    .header {
      display: inline-block;
      width: 100%;
      padding-top: 0.5rem;

      .mailcard-small {
        font-size: 16px;
        opacity: 0.7;
        transition: 100ms;
        height: 24px;
        overflow: hidden;

        &.closed {
          height: 0;
        }
      }

      .mailcard-subject {
        font-size: 20px;
        margin-top: 0.5rem;
        margin-bottom: 0.3rem;

        .no-subject {
          font-style: italic;
          opacity: 0.5;
        }
      }
    }

    .insight {
      margin: 5px 0 10px;
      padding: 5px 0;
      border-radius: 3px;

      background-color: color.adjust($color-dark, $lightness: 2%);
      box-shadow:
        1px 1px 2px color.adjust($color-dark, $lightness: -5%) inset,
        -0.5px -0.5px 2px color.adjust($color-dark, $lightness: 10%) inset;

      ul {
        margin: 0;
        padding-left: 30px;

        li {
          margin: 5px 0;
          border-radius: 5px;
        }
      }
    }

    .actionBox {
      position: absolute;
      display: flex;
      justify-content: center;
      right: 0.5rem;
      top: 0;
      width: auto;
      height: 40px;

      .iconBox {
        width: 30px;

        svg {
          width: 20px;
          height: 20px;
        }

        &:hover > svg {
          width: 24px;
          height: 24px;
        }

        &:active > svg {
          width: 22px;
          height: 22px;
        }

        .star {
          color: $color-point;
        }
      }
    }

    &.skeleton {
      border: none;
      width: 100%;
      height: 152.5px;

      div {
        border-radius: 9px;
        background-color: rgba(100, 100, 100, 0.2);
        height: 16px;
        margin: 0 0 0.3rem 0;

        &:last-child {
          margin-top: 1rem;
          height: 24px;
        }
      }
    }

    .search_highlight {
      margin-top: 0.5rem;

      div {
        overflow-wrap: break-word;

        em {
          font-style: normal;
          font-weight: 500;
          padding: 0 3px;
          border-radius: 2px;
        }
      }

      div {
        color: color.adjust($color-light, $lightness: -10%);

        em {
          color: $color-point;
          background-color: rgba(255, 255, 255, 0.1);
        }
      }
    }
  }
}

